--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,8 +30,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.security.oauth2.client.registration.google.client-id=1041155900375-qfdebvmpf6oida4uhlp17v4i4etkcnnt.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
-spring.security.oauth2.client.registration.facebook.client-id=123
-spring.security.oauth2.client.registration.facebook.client-secret=123
+spring.security.oauth2.client.registration.facebook.client-id=808056860261237
+spring.security.oauth2.client.registration.facebook.client-secret=65dd0601d15711c83e95c9916737491c
 spring.security.oauth2.client.registration.facebook.scope=public_profile,email
 
 
