Update mail credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.thymeleaf.suffix=.html
 #======================= Config JavaMail Sender ==========================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=duckhailinux@gmail.com
-spring.mail.password=ggzfknlvnmrftmsk
+spring.mail.username=duckhai1008@gmail.com
+spring.mail.password=123gsebtqixztgdmdjd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
