--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,31 @@
-name: Run Tests and Calculate Coverage
+name: Build and Test Java Spring Boot Application
 
 on:
   push:
-    branches:
-      - main  # You can change this to your main branch name
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # You can choose a different runner if needed
+
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Java
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: 11  # You can choose a different Java version
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-      - name: Build and Test
-        run: |
-          mvn clean install
-          mvn test
+      - name: Build with Maven
+        run: mvn clean verify
 
-      - name: Calculate Coverage
-        run: |
-          mvn jacoco:prepare-agent test jacoco:report
-
-   
+      - name: Test Report
+        uses: actions/upload-artifact@v3
+        if: success() || failure()
+        with:
+          name: SpringBoot Report               # Name of the folder
+          path: target/site/serenity/           # Path to test results
