--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven
-        run: mvn clean verify
+      - name: Test with Maven
+        run: mvn test
 
       - name: Test Report
         uses: actions/upload-artifact@v3
