--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,35 @@ spring.datasource.password=password
 spring.sql.init.platform=h2
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+
+#======================= Config file upload ==========================
+# max file size - default 1MB
+spring.servlet.multipart.max-file-size=10MB
+# max request size - default 10MB
+spring.servlet.multipart.max-request-size=25MB
+
+#======================= Config classpath ==========================
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+#======================= Config JavaMail Sender ==========================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=duckhai1008@gmail.com
+spring.mail.password=gsebtqixztgdmdjd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#======================= Config OAUTH2 ==========================
+spring.security.oauth2.client.registration.google.client-id=1041155900375-qfdebvmpf6oida4uhlp17v4i4etkcnnt.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.facebook.client-id=808056860261237
+spring.security.oauth2.client.registration.facebook.client-secret=65dd0601d15711c83e95c9916737491c
+spring.security.oauth2.client.registration.facebook.scope=public_profile,email
+
+
+
+#======================= Handle error ==========================
+server.error.whitelabel.enabled=false
+server.error.path=/error
