--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -119,6 +120,11 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>3.0.0-M5</version> <!-- Use the appropriate version -->
 			</plugin>
 			<!-- JaCoCo plugin -->
 			<plugin>
@@ -138,7 +144,23 @@
 							<goal>report</goal>
 						</goals>
 					</execution>
+
 				</executions>
+				<configuration>
+					<excludes>
+						<exclude>com/metis/book/config/**</exclude>
+						<exclude>com/metis/book/controller/**</exclude>
+						<exclude>com/metis/book/dto/**</exclude>
+						<exclude>com/metis/book/event/**</exclude>
+						<exclude>com/metis/book/exception/**</exclude>
+						<exclude>com/metis/book/model/**</exclude>
+						<exclude>com/metis/book/security/**</exclude>
+						<exclude>com/metis/book/utils/**</exclude>
+						<exclude>com/metis/book/validation/**</exclude>
+						<exclude>com/metis/book/repository/**</exclude>
+						<!-- More classes can be excluded as needed -->
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
