--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,9 @@
+name: Run Tests and Calculate Coverage
+
+on:
+  push:
+    branches:
+      - main  # You can change this to your main branch name
 jobs:
   build:
     runs-on: ubuntu-latest
