--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           cache: maven
 
       - name: Test with Maven
-        run: mvn site
+        run: mvn clean test
 
       - name: Generate Test case Report
         run: mvn surefire-report:report-only
