Update for report

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/book_store?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -21,14 +21,14 @@ spring.thymeleaf.suffix=.html
 #======================= Config JavaMail Sender ==========================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=duckhai1008@gmail.com
-spring.mail.password=gsebtqixztgdmdjd
+spring.mail.username=duckhailinux@gmail.com
+spring.mail.password=bwobxbncyumwvhyh 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #======================= Config OAUTH2 ==========================
-spring.security.oauth2.client.registration.google.client-id=1041155900375-qfdebvmpf6oida4uhlp17v4i4etkcnnt.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=617507540054-jdmn0o2ks9m3c4pfl43plrv7d775pe4p.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.facebook.client-id=808056860261237
 spring.security.oauth2.client.registration.facebook.client-secret=65dd0601d15711c83e95c9916737491c
